# tiny_lidar_net_example

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  zenn.md  zenn_content.md  zenn_content2.md
commands/: __init__.py  auto.py  autodrive.py  collect.py  evaluate.py  manual.py  train.py
docs/zenn/: zenn.md  zenn_content.md  zenn_content2.md  zenn_overview.md
docs/zenn/store/: overtraining.webm  trained_cur_ch_stuck.webm
scripts/: draw_model.py  plot_huber.py  plot_tanh.py
simulator/: __init__.py
simulator/core/: __init__.py  lidar.py  simulator.py  vehicle.py  world.py
simulator/ml/: __init__.py  dataset.py  model.py  trainer.py
simulator/viz/: __init__.py  auto.py  manual.py  realtime.py
tiny_lidar_net/: __init__.py  control.py  dataset.py  model.py  trainer.py
worlds/: circuit.json  circuit.yaml  simple.json  simple.yaml
worlds/chicane_circuit/: eval.yaml  robot.yaml  world.yaml
worlds/circuit/: eval.yaml  robot.yaml  world.yaml
worlds/curved_circuit/: eval.yaml  robot.yaml  world.yaml
worlds/diagonal_chicane_circuit/: eval.yaml  robot.yaml  world.yaml
worlds/double_island_circuit/: eval.yaml  robot.yaml  world.yaml
worlds/dynamic_circuit/: world.yaml
worlds/maze/: eval.yaml  robot.yaml
worlds/simple/: world.yaml
