[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-lidar-net-example"
version = "0.1.0"
description = "tiny-lidar-net学習用の最小2Dシミュレーター"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "ir-sim>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
ml = [
    "torch>=2.0.0",
]
all = [
    "torch>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["simulator", "commands"]

[project.scripts]
tiny-lidar-net-example = "main:main"
