[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-lidar-net-example"
version = "0.1.0"
description = "tiny-lidar-net学習用の最小2Dシミュレーター"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "robosim2d",
]

[tool.uv.sources]
robosim2d = { git = "https://github.com/araitaiga/robosim2d.git" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
viz = [
    "matplotlib>=3.7.0",
]
ml = [
    "torch>=2.0.0",
]
all = [
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["simulator", "commands"]

[project.scripts]
tiny-lidar-net-example = "main:main"
