[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-lidar-net-example"
version = "0.1.0"
description = "Minimal 2D simulator example for explaining TinyLidarNet"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "robosim2d",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
]

[tool.uv.sources]
robosim2d = { git = "https://github.com/araitaiga/robosim2d.git" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tiny_lidar_net", "commands"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"worlds" = "worlds"

[project.scripts]
tiny-lidar-net-example = "main:main"
